Fix word wrapping.

--- a/static/client.css
+++ b/static/client.css
@@ -171,7 +171,7 @@ html, body {
 .irc-body td.privmsg {
     width: 100%;
     padding-left: 1em;
-    word-break: break-all;
+    word-break: normal;
     white-space: pre-wrap;
 }
 
